# salary-manager

./: .gitignore  README.md
.github/workflows/: api-deploy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_schema.py  0002_nl_readonly_role.py
apps/api/app/: db.py  main.py  settings.py
apps/api/app/src/: router.py
apps/api/app/src/analytics/: queries.py  router.py  schemas.py
apps/api/app/src/common/: auth.py  enums.py  schemas.py
apps/api/app/src/employee/: queries.py  router.py  schemas.py
apps/api/app/src/lookup/: router.py  schemas.py
apps/api/app/src/nl/: client.py  llm_agent.py  log.py  router.py  schema_hints.yaml  schema_prompt.py  schemas.py  sql_guard.py  tools.py
apps/api/app/src/user/: router.py  schemas.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: conftest.py  test_analytics_endpoints.py  test_auth_endpoints.py  test_employees_endpoints.py  test_nl_endpoint.py
apps/api/tests/unit/: test_analytics_helpers.py  test_auth_primitives.py  test_employee_helpers.py  test_schema_prompt.py  test_sql_guard.py
apps/web/: .env.example  .env.production  .gitignore  .npmrc  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  (+1 more)
docs/: AI_PROMPTS.md  ARCHITECTURE.md  REQUIREMENTS.md  TRADEOFFS.md
(+68 files in other folders)
